write a cucumber test for multiplayer, cant figure out why last step is not recognize as defined. Refactor

--- a/views/newgame.erb
+++ b/views/newgame.erb
@@ -1,5 +1,5 @@
 
-<p>"Start placing your ships, <%=@visitor%>!"</p>
+<p>Place your ships, <%=@visitor%>!</p>
 <style type="text/css">
 .boards {
  width: 500px;
@@ -39,7 +39,7 @@
     <input name="coordinate" type="text">
     <select name="direction">
     <option value="horizontally">Horizontally to the right</option>
-    <option value=:vertically>Vertically down</option>
+    <option value="vertically">Vertically down</option>
     <input value="Submit" type="submit">
   </form>
 
