--- a/views/play_single.erb
+++ b/views/play_single.erb
@@ -1,4 +1,4 @@
-PLAY
+<center>PLAY
 <style type="text/css">
 .boards {
  width: 500px;
@@ -15,7 +15,7 @@ PLAY
 
 <div class='boards'>
  <div class='myboard'>
-   My Board
+   <%= @visitor %> 's board
    <pre> <%= $game.own_board_view $game.player_1 %> </pre>
  </div>
  <div class='enemyboard'>
@@ -24,8 +24,11 @@ PLAY
  </div>
 </div>
 
-Shoot at these coordinates
-<form action="play_single" method="post">
-  <input type="text" name="coord">
-  <input value="Fire!" type="submit">
-</form>
+<div style= "padding-top:300px">
+  Shoot at these coordinates
+  <form action="play_single" method="post">
+    <input type="text" name="coord">
+    <input value="Fire!" type="submit">
+  </form>
+</div>
+</center>
